# haskell_gorn

./: CHANGELOG.md  README.md  flake.nix  gorn.cabal
exe/: Main.hs
src/: Duplicates.hs  Tree.hs  Utils.hs
