cabal-version:      3.4
name:               gorn
version:            0.1.0.0
synopsis:           Filesystem duplicate finder.
-- description:
license:            MIT
license-file:       LICENSE
author:             Patsakula Nikita
maintainer:         nikita.patsakula@gmail.com
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    -- ghc-options: -Wall -Wno-name-shadowing

    default-extensions: OverloadedStrings DerivingStrategies LambdaCase

    build-depends: base >=4.15.0.0, relude
                 , directory, filepath
                 , bytestring, cryptohash-md5, base64
                 , containers
                 , async-pool
                 , transformers, mtl

    mixins: base hiding (Prelude)
          , relude (Relude as Prelude)
          , relude

library
    import:           warnings
    exposed-modules:  Tree Duplicates
    other-modules:    Utils
    hs-source-dirs:   src
    default-language: GHC2021

executable gorn
    import:           warnings
    main-is:          Main.hs
    build-depends: gorn
                 , optparse-applicative
    ghc-options: -threaded -rtsopts

    hs-source-dirs:   exe
    default-language: GHC2021

test-suite gorn-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        gorn
